z-index fixed, navBar functionality remade, btns of navBar with selection functionality

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -2,165 +2,127 @@
     display: flex;
     flex-direction: row;
     gap: 30px;
-    z-index: -10;
-
 }
 
-.circle {
-    width: 40px;
-    height: 40px;
+.test-navbar {
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    border: 3px solid var(--secondary-color);
     background-color: var(--secondary-color);
+    position:fixed;
+    left: 50px;
     display: flex;
+    flex-direction:column;
     align-items: center;
     justify-content: center;
-    position: fixed; /* Solo aquí */
-    top: 35px;
-    left: 40px;
-}
-
-#menuToggle {
-    display: block;
-    position: fixed;
-    top: 50px;
-    left: 50px;
-    z-index: 100;
-    -webkit-user-select: none;
-    user-select: none;
-}
-
-#menuToggle a {
-    text-decoration: none;
-    display: flex;
-    color: var(--text-color);
-    transition: color 0.3s ease;
-    width: 100%;
-    padding: 10px;
-}
-
-#menuToggle li:hover {
-    background-color: var(--primary-color);
-    border-radius: 5px;
-    justify-content: center;
-    transition:cubic-bezier(0.19, 1, 0.22, 1) 0.3s;
-}
-
-
-#menuToggle input
-{
-    display: block;
-    width: 40px;
-    height: 32px;
-    position: absolute;
-    top: -7px;
-    left: -5px;
-    
     cursor: pointer;
-    
-    opacity: 0; /* hide this */
-    z-index: 102; /* and place it over the hamburger */
-    
-    -webkit-touch-callout: none;
+    z-index: 200;
 }
 
-#menuToggle span {
+.test-span-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.test-navbar span {
     display: block;
     width: 26px;
-    height: 2px;
-    margin-bottom: 5px;
-    position: relative;
-    
+    height: 3px;
     background: var(--btn-color);
     border-radius: 3px;
-    
-    z-index: 101;
-    
-    transform-origin: 4px 0px;
-    
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 opacity 0.55s ease;
 }
 
-#menuToggle span:first-child {
+.test-navbar span:nth-last-child(2) {
     transform-origin: 0% 0%;
 }
 
-#menuToggle span:nth-last-child(2) {
-    transform-origin: 0% 100%;
+/* ANIMACION BOTON MENU */
+
+.clicked span:first-child {
+    transform: rotate(45deg) translate(5px, 6px);
+    background-color: var(--white);
 }
 
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span {
-    opacity: 1;
-    transform: rotate(45deg) translate(-2px, -1px);
-    background: var(--white);
-}
-
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
+.clicked span:nth-child(2) {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
-    transform: rotate(-45deg) translate(0, -1px);
+.clicked span:last-child {
+    transform: rotate(-45deg) translate(5px, -6px);
+    background-color: var(--white);
+}
+
+/* ANIMACIÓN MENU */
+
+
+.menu-container {
+    position: fixed;
+    width: 80vw;
+    max-width: 400px;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    -webkit-user-select: none;
+    user-select: none;
+    box-sizing: content-box;
+    transform-origin: 0% 0%;
+    transform: translateX(-100%);
+    opacity: 0;
+    overflow-x: hidden;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.5s;
 }
 
 #menu {
     position: relative;
-    width: 80vw;
-    max-width: 400px;
-    height: 100vh;
-    margin: -100px 0 0 -50px;
-    box-sizing: content-box;
-    overflow-y: auto;
     padding: 50px;
     padding-top: 125px;
     background: var(--secondary-color);
     border-radius: 5px;
-    overflow-x: hidden;
-    list-style-type: none;
-    -webkit-font-smoothing: antialiased;
-    /* to stop flickering of text in safari */
-    
-    transform-origin: 0% 0%;
-    transform: translate(-100%, 0);
-    z-index: 100;
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+    height: 100vh;
 }
 
-/* .menu-content {
-    padding: 50px;
-    padding-top: 125px;
-} */
+.show-navBar {
+    transform: translateX(0);
+    opacity: 1;
+    pointer-events: auto;
+}
 
-#menu li
-{
+#menu li {
     font-size: 18px;
     font-weight: 600;
-}
-
-#menu li label
-{
     cursor: pointer;
 }
 
-/*
- * And let's slide it in from the left
- */
-#menuToggle input:checked ~ ul
-{
-  transform: none;
+.nav-item-mobile {
+    text-decoration: none;
+    display: flex;
+    color: var(--text-color);
+    transition: background-color 0.2s ease-in-out;
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
 }
+
+#menu li:hover {
+    background-color: var(--primary-color);
+    border-radius: 5px;
+    /* transition:cubic-bezier(0.19, 1, 0.22, 1) 0.3s; */
+}
+
+
+.menu-mobile {
+    pointer-events: none; 
+}
+
 
 /* LANGAUGE */
 .nav-mobile-line {
@@ -184,10 +146,37 @@
 .language-container {
     display: flex;
     padding: 10px;
+    margin-top: 10px;
     gap: 15px;
     color: var(--white);
     flex-direction:row;
     align-content: center;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.language-container:hover {
+    background-color: var(--primary-color);
+}
+
+.language-container-selected {
+    display: flex;
+    padding: 10px;
+    margin-top: 10px;
+    gap: 15px;
+    color: var(--white);
+    flex-direction:row;
+    align-content: center;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.language-selected {
+    background-color: rgba(var(--white-50), 0.9);
+    color: var(--secondary-color);
+    font-weight: 800;
+    
 }
 
 /* TEMAS */
@@ -207,7 +196,19 @@
     width: 30px;
     border: solid rgba(var(--white-50), 0.1) 1px;
     box-shadow: -2px 2px 0px var(--shadow);
+    border: 2px solid transparent;
     flex-shrink: 0;
+    cursor: pointer;
+    transition: border 0.2s ease-in-out;
+}
+
+.theme-button:hover {
+    border: solid var(--white) 2px;
+}
+
+.theme-button-selected {
+    border: solid var(--white) 2px;
+    transform: scale(1.1);
 }
 
 .dark {
@@ -234,3 +235,9 @@
     background-color: var(--success-email);
 }
 
+@media ((max-width: 600px)){
+    .menu-container {
+        width: 100vw;
+        max-width: 100%;
+    }
+}
